# bluesky

./: .gitignore  Dockerfile  README.md  arborescence.txt  docker-compose.yaml  docker_requirements.txt  requirements.txt
airflow/dags/: bluesky_clean_dag.py  bluesky_ingest_dag.py  bluesky_vectors_dag.py  ml_retrain_dag.py
import_data/: app.py  functions.py  getItems.py
init-db/: 01_init.sql  02_schema.sql  03_clusters.sql  04_sentiment_fakenews.sql
kedro-clean/: README.md  pyproject.toml  requirements.txt
kedro-clean/conf/base/: catalog.yml  parameters.yml
kedro-clean/src/kedro_clean/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
kedro-clean/src/kedro_clean/pipelines/: nodes.py  nodes_ml.py  nodes_nlp.py  nodes_vectors.py  pipeline.py  pipeline_ml.py  pipeline_vectors.py
streamlit/: app.py  predict.py
streamlit/pages/: 2_Suivi_energetique.py
